# xnat_selenium_tests

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
reports/: test_report_2025-02-15.md  test_run_20250127.md
resources/xnat-docker-compose/: README.md  docker-compose.yml
scripts/: manage_xnat_test_env.sh  run_tests_in_docker.sh  run_xnat_suite.sh  setup_venv.sh
src/xnat_selenium/: __init__.py  browser.py  config.py  element_specifications.py  mock_driver.py  page_registry.py  pipeline.py  xpath.py
src/xnat_selenium/pages/: base.py  dashboard.py  experiments.py  login.py  project_details.py  projects.py  subjects.py
tests/: conftest.py  test_browser_support.py  test_dashboard_navigation.py  test_element_specifications.py  test_login.py  test_page_object_registry.py  test_pipeline_method_sorter.py  test_project_details_tab.py  test_project_lifecycle.py  test_project_management.py  test_subject_and_experiment_management.py  test_xpath_locator.py
tests/resources/: sample_element_specifications.yaml  sample_element_specifications_serialized.yaml
